--- a/app/src/main/res/layout/activity_tela_inicial.xml
+++ b/app/src/main/res/layout/activity_tela_inicial.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".TelaInicialActivity">
+    <include layout="@layout/toolbar" android:id="@+id/toolbarInclude"/>
 
     <TextView
         android:id="@+id/mensagemTelainicial"
