--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -8,6 +8,12 @@
         app:showAsAction="always"
         app:actionViewClass="androidx.appcompat.widget.SearchView"/>
 
+    <item android:id="@+id/action_adicionar"
+        android:icon="@drawable/ic_adicionar_white"
+        android:title="Adicionar"
+        app:showAsAction="always"
+        app:actionViewClass="androidx.appcompat.widget.SearchView"/>
+
     <item android:id="@+id/action_atualizar"
         android:icon="@drawable/ic_atualizar_white"
         android:title="@string/action_atualizar"
